components/Introduction/Introduction.css
.wrapper {
  font-size: 16px;
  line-height: 28px;
  margin: 0 auto;
  padding: 50px;
  background: #f4f2f2;
  color: #15241a;

  grid-column: 3;
  grid-row: 1;
}

.content {
  position: sticky;
  top: 50px;
  height: calc(100vh - 100px);
  overflow-y: scroll;
}

.wrapper a {
  border-bottom: 1px solid;
}

em {
  font-style: normal;
  padding: 6px 3px 3px 3px;
  border-radius: 30px;
  border: 1px solid;
}

.selected {
  border-top: 1px solid;
}

ol {
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: auto;
  grid-gap: 1rem;
  position: relative;
}

li {
  list-style: none;
  display: block;
  position: relative;
  height: 100%;
  border: 1px solid;
}

.wrapper img {
  width: 100%;
}

.wrapper li a {
  display: block;
  height: 100%;
  padding: 20px;
  border: none;
  transition: cubic-bezier(.165,.84,.44,1) .25s;
  white-space: normal;
}

.wrapper li a:hover {
  background: #15241a;
  color: white;
}

.metadata {
  max-width: 400px;
}

.metadata h3,
.metadata p {
  margin: 0;
}


@media only screen and (max-width: 900px) {
  .wrapper {
    grid-column: 1;
    grid-row: 1;
  }

  .content {
    height: auto;
  }
}

@media only screen and (max-width: 400px) {
  .wrapper {
    padding: 10px 20px;
  }
}

